# lisp-interpreter

./: .coveralls.yml  .gitignore  .travis.yml  README.md  project.cabal  script.ghci  stack.yaml
app/: Kc.hs  Ki.hs  Kl.hs  Main.hs
doc/: contrib.md  report.md
examples/expression/: expr_example.txt
examples/program/: lambda.txt  merge_sort.txt
examples/statement/: stmtList.txt  vector.txt
src/: AST.hs  FileIO.hs  Lib.hs  Memory.hs  Parser.hs
src/Compiler/: Codegen.hs  Emit.hs
src/Eval/: Expr.hs  Func.hs  Prog.hs  Program.hs  Stmt.hs
src/Parser/: Base.hs  Expr.hs  Func.hs  Lexeme.hs  Prog.hs  Program.hs  Stmt.hs
test/: Base.hs  common.hs  if.hs  program.txt  testEval.hs  testParser.hs
testprograms/: cons.txt  fib.txt  list.txt  nil.txt  program.txt  set.txt  string.txt  while.txt
