name:                project
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/project#readme
license:             BSD3
license-file:        LICENSE
author:              Kevin
maintainer:          b_liu14@163.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                    ,  AST
                    ,  Eval.Expr
                    ,  Eval.Program
                    ,  Parser.Expr
                    ,  Parser.Base
                    ,  Parser.Program
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , containers
                     , scientific
                     , pretty
                     , GenericPretty
  default-language:    Haskell2010

executable ki
  hs-source-dirs:      app
  main-is:             Ki.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project
                     , attoparsec
                     , containers
                     , text
                     , optparse-applicative
                     , pretty
  default-language:    Haskell2010

-- executable main
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , project
--                      , hflags
--                      , optparse-applicative
--   default-language:    Haskell2010

-- test-suite project-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , project
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/project
