name:                project
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            git@github.com:b-liu14/haskell_project.git
license:             BSD3
license-file:        LICENSE
author:              Kevin
maintainer:          b_liu14@163.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
--
library
  hs-source-dirs:      src
  exposed-modules:     FileIO
                     , AST
                     , Memory
                     , Eval.Expr
                     , Eval.Program
                     , Parser.Expr
                     , Parser.Base
                     , Parser.Program
                     , Gen.Config
                     , Gen.Expr
                     , Gen.Program

  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , containers
                     , scientific
                     , pretty
                     , GenericPretty
  default-language:    Haskell2010

executable ki
  hs-source-dirs:      app
  main-is:             Ki.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project
                     , attoparsec
                     , containers
                     , text
                     , optparse-applicative
                     , pretty
                     , GenericPretty
                     , haskeline
  default-language:    Haskell2010

executable kc
  hs-source-dirs:      app
  main-is:             Kc.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , project
                     , attoparsec
                     , containers
                     , text
                     , optparse-applicative
                     , pretty
                     , GenericPretty
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite parser-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             testParser.hs
  build-depends:       base
                     , project
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , HUnit
                     , QuickCheck
                     , attoparsec
                     , containers
                     , text
                     , optparse-applicative
                     , pretty
                     , GenericPretty
                     , haskeline
                     , scientific
                     , mtl
test-suite eval-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             testEval.hs
  build-depends:       base
                     , project
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
                     , HUnit
                     , QuickCheck
                     , attoparsec
                     , containers
                     , text
                     , optparse-applicative
                     , pretty
                     , GenericPretty
                     , haskeline
                     , scientific
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/project
